Kebab/kebabParser.java
// Generated from kebab.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class kebabParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__12=1, T__11=2, T__10=3, T__9=4, T__8=5, T__7=6, T__6=7, T__5=8, T__4=9, 
		T__3=10, T__2=11, T__1=12, T__0=13, COMMENT=14, LINE_COMMENT=15, ELSEIF=16, 
		SEMICOLON=17, HASHMAP=18, SIZE=19, CONTAINS=20, FOREACH=21, AS=22, REMOVE=23, 
		DOT=24, SET=25, INSERT=26, INSERT_UNIQUE=27, FUNCTION=28, DO=29, SWITCH=30, 
		CASE=31, DEFAULT=32, FOR=33, TRUE=34, FALSE=35, GR=36, GRT=37, LR=38, 
		LRT=39, EQ=40, NEQ=41, TYPE_BOOLEAN=42, TYPE_BYTE=43, TYPE_SHORT=44, TYPE_INT=45, 
		TYPE_LONG=46, TYPE_FLOAT=47, TYPE_DOUBLE=48, TYPE_CHAR=49, TYPE_ARRAY=50, 
		TYPE_STRING=51, TYPE_SET=52, TYPE_HASHMAP=53, LONG=54, DOUBLE=55, MOD=56, 
		MUL=57, DIV=58, ADD=59, SUB=60, EXP=61, WHITESPACE=62, NEWLINE=63, ASSIGN=64, 
		BLOCK_START=65, BLOCK_END=66, IF=67, ELSE=68, WHILE=69, AND=70, OR=71, 
		NOT=72, PAREN_OPEN=73, PAREN_CLOSE=74, STRING=75, CHAR=76;
	public static final String[] tokenNames = {
		"<INVALID>", "'return'", "'class'", "'FloatToInt'", "'readString'", "'\"'", 
		"'IntToFloat'", "'print'", "','", "'readChar'", "':'", "'['", "']'", "'readInt'", 
		"COMMENT", "LINE_COMMENT", "'elseif'", "';'", "HASHMAP", "'size'", "'contains'", 
		"'foreach'", "'as'", "'remove'", "'.'", "SET", "'insert'", "'insertUnique'", 
		"'function'", "'do'", "'switch'", "'case'", "'default'", "'for'", "'true'", 
		"'false'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'boolean'", 
		"'byte'", "'short'", "'int'", "'long'", "'float'", "'double'", "'char'", 
		"'array'", "'string'", "TYPE_SET", "TYPE_HASHMAP", "LONG", "DOUBLE", "'%'", 
		"'*'", "'/'", "'+'", "'-'", "'^'", "WHITESPACE", "'\n'", "'='", "'{'", 
		"'}'", "'if'", "'else'", "'while'", "'and'", "'or'", "'not'", "'('", "')'", 
		"STRING", "CHAR"
	};
	public static final int
		RULE_init = 0, RULE_statements = 1, RULE_param_call = 2, RULE_primitive_typesaaa = 3, 
		RULE_primitive_types = 4, RULE_func_call = 5, RULE_param_decl = 6, RULE_func_decl = 7, 
		RULE_hash_map_declare = 8, RULE_set_declare = 9, RULE_string_declare = 10, 
		RULE_array_declare = 11, RULE_primitive_declare = 12, RULE_string_assign = 13, 
		RULE_set_remove = 14, RULE_set_assign = 15, RULE_hash_map_assign = 16, 
		RULE_set_assign_unique = 17, RULE_array_assign = 18, RULE_primitive_assign = 19, 
		RULE_primitive_declare_and_assign = 20, RULE_string_declare_and_assign = 21, 
		RULE_statement = 22, RULE_lvalue = 23, RULE_expression = 24;
	public static final String[] ruleNames = {
		"init", "statements", "param_call", "primitive_typesaaa", "primitive_types", 
		"func_call", "param_decl", "func_decl", "hash_map_declare", "set_declare", 
		"string_declare", "array_declare", "primitive_declare", "string_assign", 
		"set_remove", "set_assign", "hash_map_assign", "set_assign_unique", "array_assign", 
		"primitive_assign", "primitive_declare_and_assign", "string_declare_and_assign", 
		"statement", "lvalue", "expression"
	};

	@Override
	public String getGrammarFileName() { return "kebab.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public kebabParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof kebabVisitor ) return ((kebabVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); match(T__11);
			setState(51); lvalue();
			setState(52); match(BLOCK_START);
			setState(53); statements();
			setState(54); match(BLOCK_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<TerminalNode> SEMICOLON() { return getTokens(kebabParser.SEMICOLON); }
		public List<TerminalNode> NEWLINE() { return getTokens(kebabParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(kebabParser.NEWLINE, i);
		}
		public TerminalNode SEMICOLON(int i) {
			return getToken(kebabParser.SEMICOLON, i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof kebabVisitor ) return ((kebabVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(56); statement();
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMICOLON || _la==NEWLINE) {
				{
				{
				setState(58); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(57);
						_la = _input.LA(1);
						if ( !(_la==SEMICOLON || _la==NEWLINE) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(60); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(62); statement();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_callContext extends ParserRuleContext {
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public Param_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).enterParam_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).exitParam_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof kebabVisitor ) return ((kebabVisitor<? extends T>)visitor).visitParam_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Param_callContext param_call() throws RecognitionException {
		Param_callContext _localctx = new Param_callContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_param_call);
		int _la;
		try {
			setState(77);
			switch (_input.LA(1)) {
			case T__10:
			case T__9:
			case T__7:
			case T__4:
			case T__0:
			case TRUE:
			case FALSE:
			case LONG:
			case DOUBLE:
			case ADD:
			case SUB:
			case NOT:
			case PAREN_OPEN:
			case STRING:
			case CHAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(68); expression(0);
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(69); match(T__5);
					setState(70); expression(0);
					}
					}
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case PAREN_CLOSE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Primitive_typesaaaContext extends ParserRuleContext {
		public TerminalNode TYPE_BOOLEAN() { return getToken(kebabParser.TYPE_BOOLEAN, 0); }
		public TerminalNode TYPE_SHORT() { return getToken(kebabParser.TYPE_SHORT, 0); }
		public TerminalNode TYPE_LONG() { return getToken(kebabParser.TYPE_LONG, 0); }
		public TerminalNode TYPE_INT() { return getToken(kebabParser.TYPE_INT, 0); }
		public TerminalNode TYPE_CHAR() { return getToken(kebabParser.TYPE_CHAR, 0); }
		public TerminalNode TYPE_BYTE() { return getToken(kebabParser.TYPE_BYTE, 0); }
		public TerminalNode TYPE_FLOAT() { return getToken(kebabParser.TYPE_FLOAT, 0); }
		public TerminalNode TYPE_DOUBLE() { return getToken(kebabParser.TYPE_DOUBLE, 0); }
		public Primitive_typesaaaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitive_typesaaa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).enterPrimitive_typesaaa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).exitPrimitive_typesaaa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof kebabVisitor ) return ((kebabVisitor<? extends T>)visitor).visitPrimitive_typesaaa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Primitive_typesaaaContext primitive_typesaaa() throws RecognitionException {
		Primitive_typesaaaContext _localctx = new Primitive_typesaaaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_primitive_typesaaa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE_BOOLEAN) | (1L << TYPE_BYTE) | (1L << TYPE_SHORT) | (1L << TYPE_INT) | (1L << TYPE_LONG) | (1L << TYPE_FLOAT) | (1L << TYPE_DOUBLE) | (1L << TYPE_CHAR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Primitive_typesContext extends ParserRuleContext {
		public Token type;
		public Primitive_typesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitive_types; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).enterPrimitive_types(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).exitPrimitive_types(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof kebabVisitor ) return ((kebabVisitor<? extends T>)visitor).visitPrimitive_types(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Primitive_typesContext primitive_types() throws RecognitionException {
		Primitive_typesContext _localctx = new Primitive_typesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_primitive_types);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			((Primitive_typesContext)_localctx).type = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE_BOOLEAN) | (1L << TYPE_BYTE) | (1L << TYPE_SHORT) | (1L << TYPE_INT) | (1L << TYPE_LONG) | (1L << TYPE_FLOAT) | (1L << TYPE_DOUBLE) | (1L << TYPE_CHAR))) != 0)) ) {
				((Primitive_typesContext)_localctx).type = (Token)_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_callContext extends ParserRuleContext {
		public Param_callContext param_call() {
			return getRuleContext(Param_callContext.class,0);
		}
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public Func_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).enterFunc_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).exitFunc_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof kebabVisitor ) return ((kebabVisitor<? extends T>)visitor).visitFunc_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_callContext func_call() throws RecognitionException {
		Func_callContext _localctx = new Func_callContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_func_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); lvalue();
			setState(84); match(PAREN_OPEN);
			setState(85); param_call();
			setState(86); match(PAREN_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_declContext extends ParserRuleContext {
		public Primitive_typesContext primitive_types(int i) {
			return getRuleContext(Primitive_typesContext.class,i);
		}
		public List<LvalueContext> lvalue() {
			return getRuleContexts(LvalueContext.class);
		}
		public LvalueContext lvalue(int i) {
			return getRuleContext(LvalueContext.class,i);
		}
		public List<Primitive_typesContext> primitive_types() {
			return getRuleContexts(Primitive_typesContext.class);
		}
		public Param_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).enterParam_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).exitParam_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof kebabVisitor ) return ((kebabVisitor<? extends T>)visitor).visitParam_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Param_declContext param_decl() throws RecognitionException {
		Param_declContext _localctx = new Param_declContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_param_decl);
		int _la;
		try {
			setState(100);
			switch (_input.LA(1)) {
			case TYPE_BOOLEAN:
			case TYPE_BYTE:
			case TYPE_SHORT:
			case TYPE_INT:
			case TYPE_LONG:
			case TYPE_FLOAT:
			case TYPE_DOUBLE:
			case TYPE_CHAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(88); primitive_types();
				setState(89); lvalue();
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(90); match(T__5);
					setState(91); primitive_types();
					setState(92); lvalue();
					}
					}
					setState(98);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case PAREN_CLOSE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_declContext extends ParserRuleContext {
		public Token type;
		public TerminalNode FUNCTION() { return getToken(kebabParser.FUNCTION, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode BLOCK_END() { return getToken(kebabParser.BLOCK_END, 0); }
		public Param_declContext param_decl() {
			return getRuleContext(Param_declContext.class,0);
		}
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public TerminalNode BLOCK_START() { return getToken(kebabParser.BLOCK_START, 0); }
		public Func_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).enterFunc_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).exitFunc_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof kebabVisitor ) return ((kebabVisitor<? extends T>)visitor).visitFunc_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_declContext func_decl() throws RecognitionException {
		Func_declContext _localctx = new Func_declContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_func_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			((Func_declContext)_localctx).type = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE_BOOLEAN) | (1L << TYPE_BYTE) | (1L << TYPE_SHORT) | (1L << TYPE_INT) | (1L << TYPE_LONG) | (1L << TYPE_FLOAT) | (1L << TYPE_DOUBLE) | (1L << TYPE_CHAR))) != 0)) ) {
				((Func_declContext)_localctx).type = (Token)_errHandler.recoverInline(this);
			}
			consume();
			setState(103); match(FUNCTION);
			setState(104); lvalue();
			setState(105); match(PAREN_OPEN);
			setState(106); param_decl();
			setState(107); match(PAREN_CLOSE);
			setState(108); match(BLOCK_START);
			setState(109); statements();
			setState(110); match(BLOCK_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Hash_map_declareContext extends ParserRuleContext {
		public Token type_key;
		public Token type_value;
		public TerminalNode HASHMAP() { return getToken(kebabParser.HASHMAP, 0); }
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public Hash_map_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hash_map_declare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).enterHash_map_declare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).exitHash_map_declare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof kebabVisitor ) return ((kebabVisitor<? extends T>)visitor).visitHash_map_declare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Hash_map_declareContext hash_map_declare() throws RecognitionException {
		Hash_map_declareContext _localctx = new Hash_map_declareContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_hash_map_declare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); match(HASHMAP);
			setState(113); match(LR);
			setState(114);
			((Hash_map_declareContext)_localctx).type_key = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE_BOOLEAN) | (1L << TYPE_BYTE) | (1L << TYPE_SHORT) | (1L << TYPE_INT) | (1L << TYPE_LONG) | (1L << TYPE_FLOAT) | (1L << TYPE_DOUBLE) | (1L << TYPE_CHAR))) != 0)) ) {
				((Hash_map_declareContext)_localctx).type_key = (Token)_errHandler.recoverInline(this);
			}
			consume();
			setState(115); match(T__5);
			setState(116);
			((Hash_map_declareContext)_localctx).type_value = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE_BOOLEAN) | (1L << TYPE_BYTE) | (1L << TYPE_SHORT) | (1L << TYPE_INT) | (1L << TYPE_LONG) | (1L << TYPE_FLOAT) | (1L << TYPE_DOUBLE) | (1L << TYPE_CHAR))) != 0)) ) {
				((Hash_map_declareContext)_localctx).type_value = (Token)_errHandler.recoverInline(this);
			}
			consume();
			setState(117); match(GR);
			setState(118); lvalue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Set_declareContext extends ParserRuleContext {
		public Token type;
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public TerminalNode SET() { return getToken(kebabParser.SET, 0); }
		public Set_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set_declare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).enterSet_declare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kebabListener ) ((kebabListener)listener).exitSet_declare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof kebabVisitor ) return ((kebabVisitor<? extends T>)visitor).visitSet_declare(this);
			else return visitor.visitChildren(this);
		}
	}
